refactor: 6주차 피드백 내용 수정