@@ -12,14 +12,13 @@ import com.umcstudy.jace.domain.review.repository.ReviewImageRepository;
 import com.umcstudy.jace.domain.review.repository.ReviewRepository;
 import com.umcstudy.jace.domain.user.entity.User;
 import com.umcstudy.jace.domain.user.repository.UserRepository;
+import com.umcstudy.jace.global.security.SecurityUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,7 +31,7 @@ public class ReviewService {
 
     @Transactional
     public ReviewResDTO.PostReviewWrite postReviewWrite(ReviewReqDTO.PostReviewWrite dto, Long shopId) {
-        Long userId = Long.parseLong(SecurityContextHolder.getContext().getAuthentication().getName());
+        Long userId = SecurityUtils.getCurrentUserId();
 
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ReviewException(ReviewErrorCode.USER_NOT_FOUND));
@@ -42,9 +41,11 @@ public class ReviewService {
 
         Review review = reviewRepository.save(ReviewConverter.toReview(shop, user, dto));
 
-        if (dto.reviewImageUrl() != null) {
-            dto.reviewImageUrl().forEach(url ->
-                    reviewImageRepository.save(ReviewConverter.toReviewImage(review, url))
+        if (dto.reviewImageUrl() != null && !dto.reviewImageUrl().isEmpty()) {
+            reviewImageRepository.saveAll(
+                    dto.reviewImageUrl().stream()
+                            .map(url -> ReviewConverter.toReviewImage(review, url))
+                            .toList()
             );
         }
 
@@ -61,7 +62,7 @@ public class ReviewService {
 
         List<ReviewResDTO.ReviewItem> reviewList = reviews.stream()
                 .map(ReviewConverter::toReviewItem)
-                .collect(Collectors.toList());
+                .toList();
 
         return ReviewConverter.toGetReviews(reviewList, hasNext);
     }
